sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:16: error: unclosed comment
/*for(i <- 0 until a.length)
^AlgInsertionSort:2: error: Missing closing brace `}' assumed here
def insertionSort() 
^AlgInsertionSort:3: error: expected class or object definition
{
^