sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() 
{
	for (i <- 1 to getNombreValeurs()-1)
	{
		var j=i+1
		while (j>1 && getValeur(j)<getValeur(j-1) && j<getNombreValeurs)
		{
			var c=getValeur(j)
			copie(j,getValeur(j-1))
			copie(j-1,c)
			j=j-1
		}
	}
}
/*for(i <- 0 until a.length)
{
  var j=i+1

  while(j>1&&a(j)<a(j-1)&&j<a.length)
  {
      var c=a(j)
      a(j)=a(j-1)
      a(j-1)=c
      j-=1
  }
}
/* Pour tout i dans [1,lgr-1]
  stocker la valeur de la case i dans une variable v
  recopier la case i-1 dans i, si i-1 contient une valeur plus grande que v
  recopier la case i-2 dans i-1, si i-2 contient une valeur plus grande que v
  recopier la case i-3 dans i-2, si i-3 contient une valeur plus grande que v
  recopier la case i-4 dans i-3, si i-4 contient une valeur plus grande que v
  ...
  recopier v dans la dernière case recopiée plus haut */